--- a/themes/tranquilpeak/languages/ja.yml
+++ b/themes/tranquilpeak/languages/ja.yml
@@ -56,6 +56,6 @@ post:
 
 author:
     # Your biography (Markdown and HTML supported)
-    bio: ""
+    bio: "めくじらを立てない"
     # Your job
-    job: ""
+    job: "Infra Engineer"
